2009-06-12  Lillian Angel  <langel@redhat.com>

	* acinclude.m4:
	(AC_CHECK_FOR_OPENJDK): Properly export with_openjdk var.

2009-06-12  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-liveconnect.patch: Make netscape.javascript package
	visible to javac by adding it to the non-core package list.

2009-06-10  Andrew John Hughes  <ahughes@redhat.com>
	
	* Makefile.am:
	Remove duplicate WITH_ICEDTEA blocks.
	* acinclude.m4:
	(AC_CHECK_FOR_OPENJDK): Updated so that no
	turns off the option rather than dropping out.
	(AC_CHECK_FOR_ICEDTEA): Removed.
	* configure.ac:
	Remove --with-icedtea and --with-openjdk blocks
	and duplicate --with-icedtea logic.

2009-06-10  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/jnlp/JNLPFile.java
	(needsNewJVM): New function. Returns true if the JNLP file requires 
	creating a new JVM.
	(getNewVMArgs): New function. Returns arguments to pass to the new JVM.
	* rt/net/sourceforge/jnlp/JREDesc.java
	(getVMArgs): Fix javadoc to reflect that return value can be null.
	* rt/net/sourceforge/jnlp/Launcher.java
	(launchExternal): Modify to take in arguments to pass to the JVM and 
	arguments to pass to Netx. Try to use the local file to launch this 
	instance if possible.
	(launchExternal): Delegate to new launchExternal.
	(launchExternal): New method. Take in arguments to pass to the JVM and 
	arguments to pass to Netx. Launch Netx with the with the appropriate 
	arguments.
	(launchApplication): If needed, launch a new JVM and pass along the Netx 
	arguments.
	* rt/net/sourceforge/jnlp/Parser.java:
	(getJRE): Call checkVMArgs to check 'java-vm-args' for security. If that 
	fails, assume 'java-vm-args' is null.
	(checkVMArgs): New method. Check that the vmArgs variable contains safe 
	arguments only.
	(getValidVMArguments): New method.
	(getValidStartingVMArguments): New method.
	* rt/net/sourceforge/jnlp/resources/Messages.properties: Add BXnofork.
	* rt/net/sourceforge/jnlp/runtime/Boot/java:
	Add -Xnofork to helpMessage