@@ -1,3 +1,7 @@
+2009-06-12  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am (ADD_ZERO_CONFIGURE_ARGS): Use --with-openjdk only.
+
 2009-06-12  Lillian Angel  <langel@redhat.com>
 
 	* acinclude.m4:
